Analytic file download

--- a/app/.io-config.json
+++ b/app/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"aea9896e","api_key":"e4b91cc18b9e9370dfdcd0b30e3c74419e120aa21d1fad83"}
+{"app_id":"aea9896e","api_key":"e4b91cc18b9e9370dfdcd0b30e3c74419e120aa21d1fad83","dev_push":true}
